# NeuronScope-For-AI

./: .gitignore  AGENTS.md  LICENSE  README.md  START_HERE.md  TODO.md  pyproject.toml
LLM/: put llm here.txt
experiments/: README.md  run_v1_self_model.py  run_v2_self_model.py  run_v3_head_sweep.py
experiments/analysis/: compute_base_kl.py  compute_extra_stats.py  compute_pronoun_test.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
neuronscope/: __init__.py  main.py
neuronscope/analysis/: attribution.py  insights.py  metrics.py
neuronscope/api/: routes_activations.py  routes_analysis.py  routes_experiments.py  routes_model.py  routes_reports.py  websocket.py
neuronscope/experiments/: comparator.py  reproducibility.py  runner.py  schema.py
neuronscope/hooks/: extractors.py  interventions.py  manager.py  targets.py
neuronscope/models/: loader.py  registry.py  schema.py
neuronscope/reports/: experiment_report.py  sweep_report.py  utils.py
neuronscope/store/: activation_store.py  database.py  experiment_store.py  sweep_store.py
neuronscope/utils/: tensor_utils.py  token_utils.py
results/: README.md  V1_PROVENANCE_NOTE.md  lesswrong_post.md  writings.md
results/self_model_circuits/: master_summary.json
results/self_model_circuits_v2/: RESULTS_v2.md  v2_analysis_charts.ipynb
scripts/: rerun_erratum_v2_v3.ps1
tests/: conftest.py  test_utils.py
tests/test_analysis/: test_attribution.py  test_insights.py  test_metrics.py
tests/test_experiments/: test_comparator.py  test_reproducibility.py  test_schema.py
(+59 files in other folders)
